[package]
name = "chaos_encryp4"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "chaos-encryp4"
path = "src/main.rs"

[lib]
name = "encryp"
path = "src/encryp.rs"
crate-type = ["rlib"]



# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.1.1", features = ["derive"] }
checksums = "0.9.1"

[profile.release]
lto = true
