[package]
name = "chaos_encryp4"
version = "0.0.0"
edition = "2021"

[[bin]]
name = "neko"
path = "src/main.rs"

[lib]
name = "encryp"
path = "src/encryp.rs"
crate-type = ["rlib"]



# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.1.1", features = ["derive"] }
sha3 = "0.10.6"
rand = "0.8.5"

[profile.release]
lto = true
